--- a/AllSpice.client/src/assets/scss/main.scss
+++ b/AllSpice.client/src/assets/scss/main.scss
@@ -1,8 +1,14 @@
-@import "./_variables.scss";
-@import "bootstrap";
-@import "./_overrides.scss";
-@import "./_utilities.scss";
-@import "./loaders.scss";
+// @import "./_variables.scss";
+// @import "./_overrides.scss";
+// @import "./_utilities.scss";
+// @import "./loaders.scss";
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+/* Your custom styles */
+
 
 body{
   overscroll-behavior: none;
@@ -28,10 +34,10 @@ textarea,
 select {
   &:not(:placeholder-shown) {
     &:valid {
-      border: 1px solid $success;
+      border: 1px solid #198754;
     }
     &:invalid {
-      border: 1px solid $danger;
+      border: 1px solid #dc3545;
     }
   }
 }
